# biosiglive

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: is_blacked.yml  isblacked.yml  run_test.yml
biosiglive/: __init__.py  client.py  data_plot.py  data_processing.py  enums.py  environment.yml  live_data_pytrigno.py  live_mvc.py  server.py  utils.py
biosiglive/file_io/: save_and_load.py
biosiglive/gui/: plot.py
biosiglive/interfaces/: client_interface.py  generic_interface.py  param.py  pytrigno_interface.py  tcp_interface.py  vicon_interface.py
biosiglive/io/: save_data.py
biosiglive/processing/: compute_mvc.py  data_processing.py  msk_functions.py
biosiglive/streaming/: client.py  connection.py  live_data_pytrigno(deprecated).py  server.py  stream_data.py  utils.py
docs/: contributing.md  environment_doc.yml  paper.bib  paper.md  requirements.txt
docs/source/: APIDocumentation.rst  EMG_streaming.md  about.rst  biosiglive.rst  (+22 more)
examples/: EMG_streaming.py  MVC.py  abd.bio  cadence_from_treadmill.py  compute_mvc.py  custom_interface.py  get_from_server.py  inverse_kinematics_from_mocap.py  live_mvc.py  live_plot.py  marker_streaming.py  read_data.py  read_data_file.py  read_data_from_server.py  save_and_load.py  server.py  start_server.py  stream_data.py  stream_data_from_server.py  stream_data_new.py  walk_stimulation.py
tests/: test_connection.py  test_data_processing.py  test_interfaces.py  test_io.py  test_plots.py  test_pytrigno_interface.py  test_vicon_interface.py
(+26 files in other folders)
